--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@mui/material": "^5.5.2",
     "antd": "^4.19.3",
     "axios": "^0.26.1",
+    "bizcharts": "^4.1.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "recharts": "^2.1.9"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
